# pyproject.toml
# some advices from: https://realpython.com/pypi-publish-python-package/

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optframe"
version = "5.1.0"
description = "Python bindings for OptFrame Functional Core"
readme = "README.md"
authors = [{ name = "Igor Machado Coelho", email = "igormcoelho@proton.me" }]
# license = { file = "LICENSE" } # DEPRECATED
license = "MIT OR LGPL-3.0-or-later"
classifiers = [
    # "License :: OSI Approved :: MIT License",  # DEPRECATED
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["optframe", "optimization", "metaheuristics"]
dependencies = [
    "breathe>=4.13.0",
    "exhale>=0.3.7",
    #    "ctypes"
    "recommonmark>=0.7.1",
    "sphinx>=2.0",
    "sphinx-rtd-theme>=3.0.2",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/optframe/pyoptframe"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]
